syntax = "proto3";
option cc_generic_services = true;


message makeOrderRequest
{
    string req = 1;
}

message makeOrderResponse
{
    int32 ret_code = 1;
    string res_info = 2;
    string order_id = 3;
}

service StudentService
{
    rpc makeOrder(makeOrderRequest) returns (makeOrderResponse);
}

